<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">scrap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="landmarks">landmarks</string>
	<string name="stonehenge">Stonehenge</string>
	<string name="manchester_town_hall">Manchester town hall</string>
	<string name="golden_gate_bridge">Golden gate ridge</string>
	<string name="sydney_opera_house">Sydney opera house</string>
</resources>
