<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.scrap.MainActivity" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="57dp"
        android:contentDescription="@string/landmarks"
        android:src="@drawable/golden_gate_bridge" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="133dp"
        android:layout_toLeftOf="@+id/imageView4"
        android:contentDescription="@string/landmarks"
        android:src="@drawable/manchester_town_hall" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView3"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/imageView2"
        android:contentDescription="@string/landmarks"
        android:src="@drawable/sydney_opera_house" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignTop="@+id/imageView3"
        android:contentDescription="@string/landmarks"
        android:src="@drawable/stonehenge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignRight="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/landmarks"
        android:text="@string/golden_gate_bridge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignRight="@+id/imageView4"
        android:contentDescription="@string/landmarks"
        android:text="@string/sydney_opera_house" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="28dp"
        android:layout_toLeftOf="@+id/imageView4"
        android:contentDescription="@string/landmarks"
        android:text="@string/manchester_town_hall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@+id/imageView1"
        android:contentDescription="@string/landmarks"
        android:text="@string/stonehenge" />

</RelativeLayout>
